# clepsy-desktop-source

./: .gitignore  .pre-commit-config.yml  README.md  pyproject.toml
.github/workflows/: build-validation.yaml  dev.yaml  installers.yaml  main.yaml  pr-checks.yaml
debian/: clepsy-desktop.desktop  control  postinst
packaging/linux/: postinstall.sh
packaging/windows/: installer.iss
scripts/: generate_icons.py  test_afk_detection.py
src/clepsy_desktop_source/: config.py  data_generator.py  entities.py  get_window_info.py  gui.py  idle_detector.py  main.py  screenshotter.py  sender.py  utils.py
